feat: added support for django 3.2

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,14 @@
 [tox]
-envlist = py38-django{22,30,31}
+envlist = py38-django{22,30,31,32}
 
 [testenv]
 deps =
-    django22: -r requirements/django.txt
+	django22: Django>=2.2,<2.3
 	django30: Django>=3.0,<3.1
 	django31: Django>=3.1,<3.2
+	django32: Django>=3.2,<4.0
 	-r{toxinidir}/requirements/test.txt
-changedir={toxinidir}/testproject/
+changedir = {toxinidir}/testproject/
 commands =
     pytest --cov wiki --cov django_notify
+
