--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
 python:
-  - 3.8
+  - '3.8'
 install:
   - pip install -r requirements/ci.txt
 env:
   - TOXENV=py38-django22
   - TOXENV=py38-django30
   - TOXENV=py38-django31
+  - TOXENV=py38-django32
 script:
   - tox
